lib/src/sspi/bindings.g.dart

// ignore_for_file: type=lint
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

import 'binding_shims.dart' as shims;

export 'binding_shims.dart';

/// Bindings for `Sspi.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen_configs/ffigen_sspi.yaml`.
///
class SspiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  SspiBindings(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  SspiBindings.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup)
      : _lookup = lookup;

  int AcquireCredentialsHandleW(
    ffi.Pointer<ffi.Int> pszPrincipal,
    ffi.Pointer<ffi.Int> pszPackage,
    int fCredentialUse,
    ffi.Pointer<ffi.Void> pvLogonId,
    ffi.Pointer<ffi.Void> pAuthData,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.UnsignedInt,
                    ffi.Pointer<ffi.Pointer<ffi.Void>>, ffi.Pointer<ffi.Int>)>>
        pGetKeyFn,
    ffi.Pointer<ffi.Void> pvGetKeyArgument,
    ffi.Pointer<shims.SecHandle> phCredential,
    ffi.Pointer<SECURITY_INTEGER> ptsExpiry,
  ) {
    return _AcquireCredentialsHandleW(
      pszPrincipal,
      pszPackage,
      fCredentialUse,
      pvLogonId,
      pAuthData,
      pGetKeyFn,
      pvGetKeyArgument,
      phCredential,
      ptsExpiry,
    );
  }

  late final _AcquireCredentialsHandleWPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Int,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.UnsignedInt,
                          ffi.Pointer<ffi.Pointer<ffi.Void>>, ffi.Pointer<ffi.Int>)>>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<shims.SecHandle>,
              ffi.Pointer<SECURITY_INTEGER>)>>('AcquireCredentialsHandleW');
  late final _AcquireCredentialsHandleW = _AcquireCredentialsHandleWPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          int,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.UnsignedInt,
                      ffi.Pointer<ffi.Pointer<ffi.Void>>, ffi.Pointer<ffi.Int>)>>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<shims.SecHandle>,
          ffi.Pointer<SECURITY_INTEGER>)>();

  int FreeCredentialsHandle(
    ffi.Pointer<shims.SecHandle> phCredential,
  ) {
    return _FreeCredentialsHandle(
      phCredential,
    );
  }

  late final _FreeCredentialsHandlePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<shims.SecHandle>)>>('FreeCredentialsHandle');
  late final _FreeCredentialsHandle =
      _FreeCredentialsHandlePtr.asFunction<int Function(ffi.Pointer<shims.SecHandle>)>();

  int InitializeSecurityContextW(
    ffi.Pointer<shims.SecHandle> phCredential,
    ffi.Pointer<shims.SecHandle> phContext,
    ffi.Pointer<ffi.Int> pszTargetName,
    int fContextReq,
    int Reserved1,
    int TargetDataRep,
    ffi.Pointer<SecBufferDesc> pInput,
    int Reserved2,
    ffi.Pointer<shims.SecHandle> phNewContext,
    ffi.Pointer<SecBufferDesc> pOutput,
    ffi.Pointer<ffi.UnsignedInt> pfContextAttr,
    ffi.Pointer<SECURITY_INTEGER> ptsExpiry,
  ) {
    return _InitializeSecurityContextW(
      phCredential,
      phContext,
      pszTargetName,
      fContextReq,
      Reserved1,
      TargetDataRep,
      pInput,
      Reserved2,
      phNewContext,
      pOutput,
      pfContextAttr,
      ptsExpiry,
    );
  }

  late final _InitializeSecurityContextWPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<shims.SecHandle>,
              ffi.Pointer<shims.SecHandle>,
              ffi.Pointer<ffi.Int>,
              ffi.UnsignedInt,
              ffi.UnsignedInt,
              ffi.UnsignedInt,
              ffi.Pointer<SecBufferDesc>,
              ffi.UnsignedInt,
              ffi.Pointer<shims.SecHandle>,
              ffi.Pointer<SecBufferDesc>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<SECURITY_INTEGER>)>>('InitializeSecurityContextW');
  late final _InitializeSecurityContextW = _InitializeSecurityContextWPtr.asFunction<
      int Function(
          ffi.Pointer<shims.SecHandle>,
          ffi.Pointer<shims.SecHandle>,
          ffi.Pointer<ffi.Int>,
          int,
          int,
          int,
          ffi.Pointer<SecBufferDesc>,
          int,
          ffi.Pointer<shims.SecHandle>,
          ffi.Pointer<SecBufferDesc>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<SECURITY_INTEGER>)>();

  int CompleteAuthToken(
    ffi.Pointer<shims.SecHandle> phContext,
    ffi.Pointer<SecBufferDesc> pToken,
  ) {
    return _CompleteAuthToken(
      phContext,
      pToken,
    );
  }

  late final _CompleteAuthTokenPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<shims.SecHandle>, ffi.Pointer<SecBufferDesc>)>>(
          'CompleteAuthToken');
  late final _CompleteAuthToken =
      _CompleteAuthTokenPtr.asFunction<int Function(ffi.Pointer<shims.SecHandle>, ffi.Pointer<SecBufferDesc>)>();

  int FreeContextBuffer(
    ffi.Pointer<ffi.Void> pvContextBuffer,
  ) {
    return _FreeContextBuffer(
      pvContextBuffer,
    );
  }

  late final _FreeContextBufferPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>('FreeContextBuffer');
  late final _FreeContextBuffer = _FreeContextBufferPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();
}

base class SECURITY_INTEGER extends ffi.Struct {
  @ffi.UnsignedInt()
  external int LowPart;

  @ffi.Int()
  external int HighPart;
}

base class SecBufferDesc extends ffi.Struct {
  @ffi.UnsignedInt()
  external int ulVersion;

  @ffi.UnsignedInt()
  external int cBuffers;

  external ffi.Pointer<SecBuffer> pBuffers;
}

base class SecBuffer extends ffi.Struct {
  @ffi.UnsignedInt()
  external int cbBuffer;

  @ffi.UnsignedInt()
  external int BufferType;

  external ffi.Pointer<ffi.Void> pvBuffer;
}

const int SECPKG_FLAG_INTEGRITY = 1;

const int SECPKG_FLAG_PRIVACY = 2;

const int SECPKG_FLAG_TOKEN_ONLY = 4;

const int SECPKG_FLAG_DATAGRAM = 8;

const int SECPKG_FLAG_CONNECTION = 16;

const int SECPKG_FLAG_MULTI_REQUIRED = 32;

const int SECPKG_FLAG_CLIENT_ONLY = 64;

const int SECPKG_FLAG_EXTENDED_ERROR = 128;

const int SECPKG_FLAG_IMPERSONATION = 256;

const int SECPKG_FLAG_ACCEPT_WIN32_NAME = 512;

const int SECPKG_FLAG_STREAM = 1024;

const int SECPKG_FLAG_NEGOTIABLE = 2048;

const int SECPKG_FLAG_GSS_COMPATIBLE = 4096;

const int SECPKG_FLAG_LOGON = 8192;

const int SECPKG_FLAG_ASCII_BUFFERS = 16384;

const int SECPKG_FLAG_FRAGMENT = 32768;

const int SECPKG_FLAG_MUTUAL_AUTH = 65536;

const int SECPKG_FLAG_DELEGATION = 131072;

const int SECPKG_FLAG_READONLY_WITH_CHECKSUM = 262144;

const int SECPKG_FLAG_RESTRICTED_TOKENS = 524288;

const int SECPKG_FLAG_NEGO_EXTENDER = 1048576;

const int SECPKG_FLAG_NEGOTIABLE2 = 2097152;

const int SECPKG_FLAG_APPCONTAINER_PASSTHROUGH = 4194304;

const int SECPKG_FLAG_APPCONTAINER_CHECKS = 8388608;

const int SECPKG_FLAG_CREDENTIAL_ISOLATION_ENABLED = 16777216;

const int SECPKG_FLAG_APPLY_LOOPBACK = 33554432;

const int SECPKG_ID_NONE = 65535;

const int SECPKG_CALLFLAGS_APPCONTAINER = 1;

const int SECPKG_CALLFLAGS_APPCONTAINER_AUTHCAPABLE = 2;

const int SECPKG_CALLFLAGS_FORCE_SUPPLIED = 4;

const int SECPKG_CALLFLAGS_APPCONTAINER_UPNCAPABLE = 8;

const int SECBUFFER_VERSION = 0;

const int SECBUFFER_EMPTY = 0;

const int SECBUFFER_DATA = 1;

const int SECBUFFER_TOKEN = 2;

const int SECBUFFER_PKG_PARAMS = 3;

const int SECBUFFER_MISSING = 4;

const int SECBUFFER_EXTRA = 5;

const int SECBUFFER_STREAM_TRAILER = 6;

const int SECBUFFER_STREAM_HEADER = 7;

const int SECBUFFER_NEGOTIATION_INFO = 8;

const int SECBUFFER_PADDING = 9;

const int SECBUFFER_STREAM = 10;

const int SECBUFFER_MECHLIST = 11;

const int SECBUFFER_MECHLIST_SIGNATURE = 12;

const int SECBUFFER_TARGET = 13;

const int SECBUFFER_CHANNEL_BINDINGS = 14;

const int SECBUFFER_CHANGE_PASS_RESPONSE = 15;

const int SECBUFFER_TARGET_HOST = 16;

const int SECBUFFER_ALERT = 17;

const int SECBUFFER_APPLICATION_PROTOCOLS = 18;

const int SECBUFFER_SRTP_PROTECTION_PROFILES = 19;

const int SECBUFFER_SRTP_MASTER_KEY_IDENTIFIER = 20;

const int SECBUFFER_TOKEN_BINDING = 21;

const int SECBUFFER_PRESHARED_KEY = 22;

const int SECBUFFER_PRESHARED_KEY_IDENTITY = 23;

const int SECBUFFER_DTLS_MTU = 24;

const int SECBUFFER_SEND_GENERIC_TLS_EXTENSION = 25;

const int SECBUFFER_SUBSCRIBE_GENERIC_TLS_EXTENSION = 26;

const int SECBUFFER_FLAGS = 27;

const int SECBUFFER_TRAFFIC_SECRETS = 28;

const int SECBUFFER_ATTRMASK = 4026531840;

const int SECBUFFER_READONLY = 2147483648;

const int SECBUFFER_READONLY_WITH_CHECKSUM = 268435456;

const int SECBUFFER_RESERVED = 1610612736;

const int SECURITY_NATIVE_DREP = 16;

const int SECURITY_NETWORK_DREP = 0;

const int SECPKG_CRED_INBOUND = 1;

const int SECPKG_CRED_OUTBOUND = 2;

const int SECPKG_CRED_BOTH = 3;

const int SECPKG_CRED_DEFAULT = 4;

const int SECPKG_CRED_RESERVED = 4026531840;

const int SECPKG_CRED_AUTOLOGON_RESTRICTED = 16;

const int SECPKG_CRED_PROCESS_POLICY_ONLY = 32;

const int ISC_REQ_DELEGATE = 1;

const int ISC_REQ_MUTUAL_AUTH = 2;

const int ISC_REQ_REPLAY_DETECT = 4;

const int ISC_REQ_SEQUENCE_DETECT = 8;

const int ISC_REQ_CONFIDENTIALITY = 16;

const int ISC_REQ_USE_SESSION_KEY = 32;

const int ISC_REQ_PROMPT_FOR_CREDS = 64;

const int ISC_REQ_USE_SUPPLIED_CREDS = 128;

const int ISC_REQ_ALLOCATE_MEMORY = 256;

const int ISC_REQ_USE_DCE_STYLE = 512;

const int ISC_REQ_DATAGRAM = 1024;

const int ISC_REQ_CONNECTION = 2048;

const int ISC_REQ_CALL_LEVEL = 4096;

const int ISC_REQ_FRAGMENT_SUPPLIED = 8192;

const int ISC_REQ_EXTENDED_ERROR = 16384;

const int ISC_REQ_STREAM = 32768;

const int ISC_REQ_INTEGRITY = 65536;

const int ISC_REQ_IDENTIFY = 131072;

const int ISC_REQ_NULL_SESSION = 262144;

const int ISC_REQ_MANUAL_CRED_VALIDATION = 524288;

const int ISC_REQ_RESERVED1 = 1048576;

const int ISC_REQ_FRAGMENT_TO_FIT = 2097152;

const int ISC_REQ_FORWARD_CREDENTIALS = 4194304;

const int ISC_REQ_NO_INTEGRITY = 8388608;

const int ISC_REQ_USE_HTTP_STYLE = 16777216;

const int ISC_REQ_UNVERIFIED_TARGET_NAME = 536870912;

const int ISC_REQ_CONFIDENTIALITY_ONLY = 1073741824;

const int ISC_REQ_MESSAGES = 4294967296;

const int SECPKG_CRED_ATTR_NAMES = 1;

const int SECPKG_CRED_ATTR_SSI_PROVIDER = 2;

const int SECPKG_CRED_ATTR_KDC_PROXY_SETTINGS = 3;

const int SECPKG_CRED_ATTR_CERT = 4;

const int SECPKG_CRED_ATTR_PAC_BYPASS = 5;

const int SECPKG_ATTR_SIZES = 0;

const int SECPKG_ATTR_NAMES = 1;

const int SECPKG_ATTR_LIFESPAN = 2;

const int SECPKG_ATTR_DCE_INFO = 3;

const int SECPKG_ATTR_STREAM_SIZES = 4;

const int SECPKG_ATTR_KEY_INFO = 5;

const int SECPKG_ATTR_AUTHORITY = 6;

const int SECPKG_ATTR_PROTO_INFO = 7;

const int SECPKG_ATTR_PASSWORD_EXPIRY = 8;

const int SECPKG_ATTR_SESSION_KEY = 9;

const int SECPKG_ATTR_PACKAGE_INFO = 10;

const int SECPKG_ATTR_USER_FLAGS = 11;

const int SECPKG_ATTR_NEGOTIATION_INFO = 12;

const int SECPKG_ATTR_NATIVE_NAMES = 13;

const int SECPKG_ATTR_FLAGS = 14;

const int SECPKG_ATTR_USE_VALIDATED = 15;

const int SECPKG_ATTR_CREDENTIAL_NAME = 16;

const int SECPKG_ATTR_TARGET_INFORMATION = 17;

const int SECPKG_ATTR_ACCESS_TOKEN = 18;

const int SECPKG_ATTR_TARGET = 19;
